# workflow-engine

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: schedules.py  variables.py  webhooks.py  workflows.py
backend/app/core/: celery_app.py  config.py  database.py  security.py
backend/app/dsl/: dag.py  examples.py
backend/app/models/: workflow.py
backend/app/schemas/: workflow.py
backend/app/services/: scheduler.py  webhook_service.py
backend/app/tasks/: executor.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py  test_dag.py
docker/: docker-compose.yml
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DAGVisualization.tsx  StateBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: RunDetail.tsx  WorkflowDetail.tsx  WorkflowList.tsx
frontend/src/utils/: state.ts
scripts/: seed_example.py
